<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>net.danh</groupId>
	<artifactId>Storage</artifactId>
	<version>2.3.4</version>
	<packaging>jar</packaging>
	
	<name>Storage</name>
	
	<description>A virtual vault to hold the blocks that players mine and many others features</description>
	
	<properties>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	
	<build>
		<finalName>${project.name}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<relocations>
						<relocation>
							<pattern>com.cryptomorin.xseries</pattern>
							<!-- Be sure to change the package below -->
							<shadedPattern>net.danh.utils</shadedPattern>
						</relocation>
						<relocation>
							<pattern>de.tr7zw.changeme.nbtapi</pattern>
							<shadedPattern>net.danh.nbtapi</shadedPattern>
						</relocation>
					</relocations>
					<!-- Here you can remove the classes you don't use. -->
					<!-- These are some examples. -->
					<!-- The "unused" package and SkullCacheListener are excluded by default. -->
					<!-- Some utilities such a XItemStack depend on more than 3 other classes, so watch out. -->
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>com/cryptomorin/xseries/XBiome*</exclude>
								<exclude>com/cryptomorin/xseries/NMSExtras*</exclude>
								<exclude>com/cryptomorin/xseries/NoteBlockMusic*</exclude>
								<exclude>com/cryptomorin/xseries/SkullCacheListener*</exclude>
								<exclude>com/cryptomorin/xseries/SkullUtils*</exclude>
								<exclude>com/cryptomorin/xseries/XBlock*</exclude>
								<exclude>com/cryptomorin/xseries/XEntity*</exclude>
								<exclude>com/cryptomorin/xseries/XPotion*</exclude>
								<exclude>com/cryptomorin/xseries/XTag*</exclude>
							</excludes>
						</filter>
					</filters>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<id>auto-clean</id>
						<phase>initialize</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>
	
	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>sonatype</id>
			<url>https://s01.oss.sonatype.org/content/groups/public/</url>
		</repository>
		<repository>
			<id>codemc-repo</id>
			<url>https://repo.codemc.org/repository/maven-public/</url>
		</repository>
		<repository>
			<id>placeholderapi</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<repository>
			<id>maven-central</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
		</repository>
		<repository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2/</url>
		</repository>
        <repository>
            <id>nexus</id>
            <name>Lumine Releases</name>
            <url>https://mvn.lumine.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>matteodev</id>
            <url>https://maven.devs.beer/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>
	
	<dependencies>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.21.10-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
        <dependency>
            <groupId>dev.folia</groupId>
            <artifactId>folia-api</artifactId>
            <version>1.21.8-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.11.6</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.InitSync.XConfig</groupId>
			<artifactId>bukkit</artifactId>
			<version>1.1.7</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.github.cryptomorin</groupId>
			<artifactId>XSeries</artifactId>
            <scope>compile</scope>
            <version>13.5.1</version>
		</dependency>
        <dependency>
            <groupId>io.lumine</groupId>
            <artifactId>Mythic-Dist</artifactId>
            <version>5.6.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.lone</groupId>
            <artifactId>api-itemsadder</artifactId>
            <version>4.0.10</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.decentsoftware-eu</groupId>
            <artifactId>decentholograms</artifactId>
            <version>2.9.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
			<groupId>org.codemc.worldguardwrapper</groupId>
			<artifactId>worldguardwrapper</artifactId>
			<version>1.2.1-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>de.tr7zw</groupId>
			<artifactId>item-nbt-api</artifactId>
			<version>2.15.3</version>
		</dependency>
		<dependency>
			<groupId>com.tchristofferson</groupId>
			<artifactId>ConfigUpdater</artifactId>
			<version>2.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>8.0.33</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>
</project>
